--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@types/node": "18.11.14",
+    "@types/react": "18.0.26",
     "babel-plugin-styled-components": "^2.0.7"
   }
 }
