--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/node": "18.11.14",
     "@types/react": "18.0.26",
+    "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.0.7"
   }
 }
